New agent phase 0 cone and phase 1 need to continue

--- a/ClawWork/.env.example
+++ b/ClawWork/.env.example
@@ -99,6 +99,16 @@ FYERS_SCREENER_RISK_PCT=1.0
 FYERS_SCREENER_STOP_LOSS_PCT=1.0
 FYERS_SCREENER_TARGET_PCT=2.0
 
+# Index + strike recommender settings (for NIFTY50, BANKNIFTY, SENSEX)
+FYERS_INDEX_SYMBOL_NIFTY50=NSE:NIFTY50-INDEX
+FYERS_INDEX_SYMBOL_BANKNIFTY=NSE:NIFTYBANK-INDEX
+FYERS_INDEX_SYMBOL_SENSEX=BSE:SENSEX-INDEX
+FYERS_STRIKE_STEP_NIFTY50=50
+FYERS_STRIKE_STEP_BANKNIFTY=100
+FYERS_STRIKE_STEP_SENSEX=100
+FYERS_INDEX_NEUTRAL_PCT=0.25
+FYERS_INDEX_STRONG_TREND_PCT=0.8
+
 # Optional request timeout in seconds
 FYERS_TIMEOUT_SECONDS=30
 
