Added key and tested successfully

--- a/ClawWork/.env.example
+++ b/ClawWork/.env.example
@@ -64,6 +64,9 @@ OCR_VLLM_API_KEY=your-dashscope-api-key-here
 # E2B API (for code sandbox execution)
 # Get API key at: https://e2b.dev/
 E2B_API_KEY=your-e2b-api-key-here
+# Optional: custom E2B template configuration
+# E2B_TEMPLATE_ID=tpl_xxxxxxxxxxxxx
+# E2B_TEMPLATE_ALIAS=gdpval-workspace
 
 # ============================================
 # FYERS TRADING API (optional)
