Symbol data is fixed and resons are updating

--- a/ClawWork/.env.example
+++ b/ClawWork/.env.example
@@ -94,6 +94,8 @@ FYERS_ALLOW_LIVE_ORDERS=false
 
 # Beginner screener settings
 FYERS_WATCHLIST=NSE:RELIANCE-EQ,NSE:TCS-EQ,NSE:HDFCBANK-EQ,NSE:INFY-EQ,NSE:SBIN-EQ
+# Optional JSON map to normalize additional company-name watchlist entries
+# FYERS_WATCHLIST_ALIASES={"Reliance Industries":"RELIANCE","Larsen & Toubro":"LT"}
 FYERS_SCREENER_BUY_MIN_PCT=0.3
 FYERS_SCREENER_BUY_MAX_PCT=2.5
 FYERS_SCREENER_AVOID_MAX_DRAWDOWN_PCT=-2.0
