Everything is working and now final touch to improve the view

--- a/ClawWork/.env.example
+++ b/ClawWork/.env.example
@@ -94,6 +94,10 @@ FYERS_ALLOW_LIVE_ORDERS=false
 
 # Beginner screener settings
 FYERS_WATCHLIST=NSE:RELIANCE-EQ,NSE:TCS-EQ,NSE:HDFCBANK-EQ,NSE:INFY-EQ,NSE:SBIN-EQ
+# Optional basket-specific watchlists for additional dashboard rows
+# FYERS_WATCHLIST_SENSEX=NSE:RELIANCE-EQ,NSE:TCS-EQ
+# FYERS_WATCHLIST_NIFTY50=NSE:HDFCBANK-EQ,NSE:INFY-EQ
+# FYERS_WATCHLIST_BANKNIFTY=NSE:ICICIBANK-EQ,NSE:SBIN-EQ
 # Optional JSON map to normalize additional company-name watchlist entries
 # FYERS_WATCHLIST_ALIASES={"Reliance Industries":"RELIANCE","Larsen & Toubro":"LT"}
 FYERS_SCREENER_BUY_MIN_PCT=0.3
