--- a/ClawWork/requirements.txt
+++ b/ClawWork/requirements.txt
@@ -29,6 +29,8 @@ tavily-python>=0.3.0  # Tavily search (recommended)
 
 # Utilities
 aiofiles>=23.2.1
+loguru>=0.7.2
+nanobot-ai
 
 python-docx>=1.0.0
 python-pptx>=0.6.21
